# regression-memory-debugger

./: .env.example  .gitignore  DEMO.md  INTEGRATION.md  README.md  index.html  pyproject.toml  requirements.txt
data/: seed_bugs.json
regression_debugger/: __init__.py  agent.py  cli.py  config.py  server.py  similarity.py  types.py
regression_debugger/memory/: base.py  local.py  parcle_store.py
regression_debugger/notify/: slack.py
regression_debugger/patch/: base.py  enter.py  local.py
tests/: test_core.py
